# currency_api

./: README.md  db.json  main.py  pyproject.toml  pytest.ini
app/api/endpoints/: auth.py  currency.py  users.py
app/api/schemas/: currency.py  user.py
app/core/: config.py  security.py
app/db/: dao.py  database.py
app/db/models/: user.py
app/db/repo/: user_repo.py
app/utils/: external_api.py
tests/: conftest.py  test_auth.py  test_currency.py
