[project]
name = "currency-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi[all]>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "pyjwt==2.11.0",
    "sqlalchemy>=2.0.46",
]
